--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
             <i class="bi bi-list"></i>
         </div>
         <ul>
-        <li class="item-menu">
-           <li class="item-menu">
-            <a href="https://danilo-mateus.github.io/Telainicial/">
+          <li class="item-menu">
+            <a href="https://danilo-mateus.github.io/Inicio/">
                 <span class="icon"><i class="bi bi-house"></i></span>
                 <span class="txt-link">Home</span>
             </a>
@@ -35,6 +34,7 @@
                             <span class="icon"><i class="bi bi-dice-2"></i></span>
                             <span class="txt-link"> 2048</span>
                         </a>
+                        
     </nav>
     <h1>2048</h1>
     <hr>
